<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vein</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_serial">打开串口</string>
    <string name="close_serial">关闭串口</string>
    <string name="open_dev">打开设备</string>
    <string name="close_dev">关闭设备</string>
    <string name="identify">认证</string>
    <string name="start_eroll">开始建模</string>
    <string name="get_button_state">获取触摸状态</string>
    <string name="set_led_state">设置灯状态</string>
    <string name="get_id_exist">验证id是否建模</string>
    <string name="cancel_wait">取消等待</string>
    <string name="clear_user">删除所有模板</string>
    <string name="del_user">删除指定模板</string>
    <string name="set_usb_mode">设置USB模式</string>
    <string name="get_empty_id">获取空ID</string>
    <string name="set_baudrate">设置波特率</string>
    <string name="set_timeout">设置延时</string>
    <string name="get_user_num">获取用户数</string>
    <string name="reset">恢复出厂设置</string>
    <string name="get_sys_info">获取系统信息</string>
    <string name="grab_image">采集图像</string>
    <string name="upload_model">上传模板</string>
    <string name="download_model">下载模板</string>
    <string name="get_tp_det">获取触摸感应</string>

</resources>
